--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 </div>
                 <div class="produto">
                     <img src="scke.jpeg" alt="Schnecke">
-                    <h3>Schnecke</h3>
+                    <h3>pãozinho doce</h3>
                     <p>R$3 a unidade</p>
                     <button onclick="adicionarAoCarrinho('Schnecke', 3)">Adicionar</button>
                 </div>
