--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header class="topo">
-  <img src="laranjacome.jpeg" alt="Imagem do Armazém da Sra. Lourdes" class="imagem-topo">
+  <img src="WhatsApp Image 2025-05-29 at 23.29.33.jpeg" alt="Imagem do Armazém da Sra. Lourdes" class="imagem-topo">
 </header>
     <header>
         <div class="logo">Armazém da Sra. Lourdes</div>
